[package]
name = "flowquery-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
pair = "0.1.0"
pairs = "0.1.0"
partially = "0.2.1"
partially_derive = "0.2.1"
pest = "2.7.15"
pest_derive = "2.7.15"
postgres = "0.19.10"
ron = { version = "0.8.1", features = ["indexmap"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
