[package]
name = "turbodiesel"
version = "0.1.0"
edition = "2024"

[features]
default = ["redis"]
inmemory = []
redis = []

[dependencies]
async-std = "1.13.1"
chrono = "0.4.40"
dateparser = "0.2.1"
diesel = { version = "2.2.8", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
dotenvy = "0.15.7"
itertools = "0.14.0"
julian = "0.7.0"
lazy_static = "1.5.0"
postgres = "0.19.10"
redis = { version = "0.32.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wildmatch = "2.4.0"

[[test]]
name = "pgtest"
path = "tests/postgres-integration-test/lib.rs"
test = true
doctest = false
bench = false
doc = false
harness = true

[dev-dependencies]
dockertest = "0.5.0"
